<resources>
    <string name="app_name">Thnk</string>
    <string name="hint">Enter your name</string>
    <string name="instructions">Instructions:\n
                                You have 2:00 minutes to answer all the questions correctly.\n
                                Quiz ends when timer expires or you click submit.\n
                                GoodLuck!</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="app_logo">App Logo</string>
    <string name="summary_card">Summary Card</string>
    <string name="name">Name</string>
    <string name="action_about">About</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="app_info">app info</string>
    <string name="version_number">Version 1.0</string>
    <string name="play_again">Play Again</string>
    <string name="time">Time</string>
    <string name="title_activity_about">About Thnk</string>

    <string name="question_place_holder">Question 1</string>
    <string name="hint_question">Enter answer here</string>
    <string name="q1_option_a">Peregrine Falcon</string>
    <string name="q1_option_b">Cheetah</string>
    <string name="q1_option_c">Pronghorn Antelope</string>
    <string name="q1_option_d">Sailfish</string>

    <string name="q2_option_a">Conspiracy</string>
    <string name="q2_option_b">Coalition</string>
    <string name="q2_option_c">Convocation</string>
    <string name="q2_option_d">Murder</string>

    <string name="q3_option_a">Chris Brown</string>
    <string name="q3_option_b">Chris Rock</string>
    <string name="q3_option_c">Chris Tucker</string>
    <string name="q3_option_d">Chris Hemsworth</string>

    <string name="q4_option_a">British Pound</string>
    <string name="q4_option_b">Bahrain Dinar</string>
    <string name="q4_option_c">Kuwait Dinar</string>
    <string name="q4_option_d">European Euro</string>

    <string name="q5_option_a">Joshua</string>
    <string name="q5_option_b">Jack</string>
    <string name="q5_option_c">James</string>
    <string name="q5_option_d">John</string>

    <string name="q6_option_a">26</string>
    <string name="q6_option_b">27</string>
    <string name="q6_option_c">28</string>
    <string name="q6_option_d">29</string>

    <string name="q7_option_a">Pretoria</string>
    <string name="q7_option_b">Cape Town</string>
    <string name="q7_option_c">Johannesburg</string>
    <string name="q7_option_d">Bloefontein</string>

    <string name="q8_option_a">Nutella</string>
    <string name="q8_option_b">Oreo</string>
    <string name="q8_option_c">Popcorn</string>
    <string name="q8_option_d">Froyo</string>
    <string name="question">Question</string>
    <string name="_1_10">1/10</string>
    <string name="_0_00">0:00</string>
    <string name="correction">Correction</string>
    <string name="score">Score</string>
    <string name="_1">1</string>
    <string name="of">of</string>
    <string name="_10">10</string>
    <string name="terms_and_conditions_text">THNK TERMS OF SERVICE\n\n\n
                            IMPORTANT - READ CAREFULLY. THESE TERMS OF SERVICE
                            (\"TOS\") ARE A LEGAL AGREEMENT BETWEEN YOU AND
                            DAVENTE CO., LTD. AND THE BLA BLA BLA. WOW THIS THING
                            IS LONG. I\'LL JUST STOP HERE!\n\n
                            So I guess what im trying to say is: Have fun, and share my app!</string>
    <string name="exclamation_mark">!</string>

    <string-array name="questions_array">
        <item>Q1</item>
        <item>Q2</item>
        <item>Q3</item>
        <item>Q4</item>
        <item>Q5</item>
        <item>Q6</item>
        <item>Q7</item>
        <item>Q8</item>
        <item>Q9</item>
        <item>Q10</item>
    </string-array>

</resources>
