<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/radio_group_question_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.theinventor.quizappudacity.MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioButton
        style="@style/OptionStyle"
        android:layout_width="match_parent"
        android:text="@string/q1_option_a" />

    <RadioButton
        android:id="@+id/q1_answer"
        style="@style/OptionStyle"
        android:layout_width="match_parent"
        android:text="@string/q1_option_b" />

    <RadioButton
        style="@style/OptionStyle"
        android:layout_width="match_parent"
        android:text="@string/q1_option_c" />

    <RadioButton
        style="@style/OptionStyle"
        android:layout_width="match_parent"
        android:text="@string/q1_option_d" />

</RadioGroup>
