<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_question_seven"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.theinventor.quizappudacity.MainActivity"
    tools:showIn="@layout/activity_main">

    <CheckBox
        android:id="@+id/q7_option_1"
        style="@style/OptionStyle"
        android:layout_width="wrap_content"
        android:text="@string/q7_option_a" />

    <CheckBox
        android:id="@+id/q7_option_2"
        style="@style/OptionStyle"
        android:layout_width="wrap_content"
        android:text="@string/q7_option_b" />

    <CheckBox
        android:id="@+id/q7_option_3"
        style="@style/OptionStyle"
        android:layout_width="wrap_content"
        android:text="@string/q7_option_c" />

    <CheckBox
        android:id="@+id/q7_option_4"
        style="@style/OptionStyle"
        android:layout_width="wrap_content"
        android:text="@string/q7_option_d" />

</LinearLayout>
