<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="64dp"
    tools:context="com.theinventor.quizappudacity.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="97dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/app_info"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="@drawable/app_info_button"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/app_info"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:text="@string/version_number" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/terms_and_conditions_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:gravity="bottom"
            android:text="@string/terms_and_conditions"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


    </RelativeLayout>

</LinearLayout>
