<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.theinventor.quizappudacity.SummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/top_linear_layout_summary"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/summary_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/top_linear_layout_summary"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        card_view:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/app_info_card_view"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginBottom="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                android:gravity="center_horizontal"
                                android:text="@string/summary_card"
                                android:textAllCaps="true"
                                android:textColor="@android:color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center_horizontal"
                                android:text="@string/name"
                                android:textAllCaps="true" />

                            <TextView
                                android:id="@+id/name_text_view"
                                style="@style/SummaryTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginBottom="16dp"
                                android:gravity="center_horizontal"
                                android:paddingTop="4dp"
                                android:text="@string/name" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="8dp"
                                android:background="@android:color/darker_gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center_horizontal"
                                android:text="@string/score"
                                android:textAllCaps="true" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginBottom="16dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingStart="20dp"
                                android:paddingTop="4dp">

                                <TextView
                                    android:id="@+id/score_text_view"
                                    style="@style/SummaryTextStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_horizontal"
                                    android:text="@string/_1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_horizontal"
                                    android:text="@string/of"
                                    android:textColor="@color/colorPrimary"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/number_of_questions"
                                    style="@style/SummaryTextStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:gravity="center_horizontal"
                                    android:text="@string/_10" />

                                <TextView
                                    android:id="@+id/exclamation_mark"
                                    style="@style/SummaryTextStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:gravity="center_horizontal"
                                    android:text="@string/exclamation_mark" />
                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/middle_linear_layout_summary"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_below="@id/summary_card_view"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/middle_linear_layout_summary"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center_horizontal"
                        android:text="@string/correction"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <include
                        layout="@layout/correction_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp" />
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:onClick="playAgain"
            android:text="@string/play_again" />

    </LinearLayout>

</RelativeLayout>
